# earnings_poc_btg

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
scripts/: export_excel.py  init_db.py  run_pipeline.py
src/: __init__.py  llm_client.py
src/graph/: __init__.py  edges.py  state.py  workflow.py
src/graph/nodes/: __init__.py  excel_writer.py  extractor.py  human_review.py  parser.py  reconciler.py  validator.py
src/ingestion/: __init__.py  file_handler.py  pdf_parser.py
src/output/: __init__.py  excel_exporter.py  excel_template.py
src/schema/: __init__.py  core_schema.py  prompts.py  validators.py
src/storage/: __init__.py  database.py  models.py  repository.py
tests/: __init__.py  test_extractor.py  test_llm_client.py  test_validator.py
